--- a/.travis.yml
+++ b/.travis.yml
@@ -25,8 +25,9 @@ before_install:
 
 script:   
    - ./run_jayhorn.sh
-   - ls $LZ
-   - python run_jpf.py -h
+   - mv $LZ .
+   - ls
+   - python run_jpf.py ./benchmarks/cbmc-java
 
 after_success:
    - echo "All done."
