--- a/.travis.yml
+++ b/.travis.yml
@@ -12,11 +12,17 @@ python:
  - 2.7
 
 install:
-  - export LZ="$TRAVIS_BUILD_DIR/../jpf"
-  - mkdir -p $LZ
-  - wget --output-document=jpf.tar.gz https://www.dropbox.com/s/x8nx2kkm66qr5nh/jpf.tar.gz?dl=1;
-  - tar xvf jpf.tar.gz --strip-components=1 -C $LZ;
-  - ls $LZ
+  - export JPF-TRAVIS="$TRAVIS_BUILD_DIR/jpf-travis"
+  - mkdir -p $JPF-TRAVIS
+  - wget --output-document=jpf-travis.tar.gz https://www.dropbox.com/s/vjqfokrldjv0mro/jpf-travis.tar.gz?dl=1;
+  - tar xvf jpf-travis.tar.gz --strip-components=1 -C $JPF-TRAVIS;
+  - ls $JPF-TRAVIS
+  - cd $JPF-TRAVIS
+  - export JPF-CORE="$TRAVIS_BUILD_DIR/jpf-travis/jpf-core"
+  - mkdir -p $JPF-CORE
+  - tar xvf jpf-core.tar.gz --strip-components=1 -C $JPF-CORE;
+  - ls .jpf
+  - mv .jpf $TRAVIS_BUILD_DIR
 
 before_install:
    - echo "Running the experiments."
@@ -25,9 +31,6 @@ before_install:
 
 script:   
    - ./run_jayhorn.sh
-   - mv $LZ .
-   - ls
-   - python run_jpf.py ./benchmarks/cbmc-java
 
 after_success:
    - echo "All done."
