--- a/.travis.yml
+++ b/.travis.yml
@@ -12,15 +12,16 @@ python:
  - 2.7
 
 install:
-  - export JPF-TRAVIS="$TRAVIS_BUILD_DIR/jpf-travis"
-  - mkdir -p $JPF-TRAVIS
+  - export JPF_TRAVIS=$(pwd)/jpf-travis
+  - mkdir -p $JPF_TRAVIS
   - wget --output-document=jpf-travis.tar.gz https://www.dropbox.com/s/vjqfokrldjv0mro/jpf-travis.tar.gz?dl=1;
-  - tar xvf jpf-travis.tar.gz --strip-components=1 -C $JPF-TRAVIS;
-  - ls $JPF-TRAVIS
-  - cd $JPF-TRAVIS
-  - export JPF-CORE="$TRAVIS_BUILD_DIR/jpf-travis/jpf-core"
-  - mkdir -p $JPF-CORE
-  - tar xvf jpf-core.tar.gz --strip-components=1 -C $JPF-CORE;
+  - tar xvf jpf-travis.tar.gz --strip-components=1 -C $JPF_TRAVIS;
+  - ls $JPF_TRAVIS
+  - cd $JPF_TRAVIS
+  - export JPF_CORE=$(pwd)/jpf-core
+  - mkdir -p $JPF_CORE
+  - tar xvf jpf-core.tar.gz --strip-components=1 -C $JPF_CORE;
+  - ls .
   - ls .jpf
   - mv .jpf $TRAVIS_BUILD_DIR
 
