--- a/.travis.yml
+++ b/.travis.yml
@@ -21,9 +21,10 @@ install:
   - export JPF_CORE=$(pwd)/jpf-core
   - mkdir -p $JPF_CORE
   - tar xvf jpf-core.tar.gz --strip-components=1 -C $JPF_CORE;
-  - ls .
-  - ls .jpf
   - mv .jpf $TRAVIS_BUILD_DIR
+  - cd 
+  - pwd
+  - ls
 
 before_install:
    - echo "Running the experiments."
