--- a/.travis.yml
+++ b/.travis.yml
@@ -40,11 +40,10 @@ install:
 before_install:
    - echo "Running the experiments."
    - pwd
-   - export LD_LIBRARY_PATH=$(pwd)/jayhorn/native_lib
+   - export LD_LIBRARY_PATH=$(pwd)/jayhorn/jayhorn/native_lib
 
 script:   
-   - ./run_jayhorn.sh
-   - echo "    RUNNING  JPF on CBMC    " 
+   - echo "    RUNNING  CBMC    " 
    - python run_jpf.py ./benchmarks/cbmc-java
    - echo "    RUNNING  JPF on MinePUMP    " 
    - python run_jpf.py ./benchmarks/MinePump/spec1-5
